--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -3,7 +3,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-8">
-             <section>      
+            <section>      
                 <h1 class="entry-title"><span>Nýskráning</span> </h1>
                 <hr/>
                 <form class="form-horizontal" enctype="multipart/form-data" asp-controller="Account" asp-action="Register" method="POST">
@@ -109,7 +109,9 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <div class="col-xs-offset-3 col-md-8 col-sm-9"><span class="text-muted"><span class="label label-danger">Athugasemd:-</span> Með því að smella á Stofna aðgang, ert þú að samþykkja <a asp-area="" asp-controller="Home" asp-action="Terms">skilmála og skilyrði</a> Book Cave.</span> </div>
+                        <div class="col-xs-offset-3 col-md-8 col-sm-9">
+                            <span class="text-muted"><span class="label label-danger">Athugasemd:-</span> Með því að smella á Stofna aðgang, ert þú að samþykkja <a asp-area="" asp-controller="Home" asp-action="Terms">skilmála og skilyrði</a> Book Cave.</span> 
+                        </div>
                     </div>
                     <div class="form-group">
                         <div class="col-xs-offset-3 col-xs-10">
@@ -117,7 +119,7 @@
                         </div>
                     </div>
                 </form>
-             </section>
+            </section>
         </div>
     </div>
 </div>
