book view komid

--- a/Views/Book/AddRating.cshtml
+++ b/Views/Book/AddRating.cshtml
@@ -3,7 +3,6 @@
 <div>
     <h1>Einkunnargjöf fyrir @ViewBag.Title</h1>
 </div>
-
 <div>
     <form method="POST">
         <div class="form-group">
@@ -19,7 +18,7 @@
         </div>
         <div class="form-group">
             <label for="comment">Þín athugasemd</label>
-            <input type="text" class="form-control" id="comment" asp-for="Text" >
+            <input type="text" class="form-control" id="comment" asp-for="Text"/>
         </div>
         <input type="submit" value="Vista"/>
     </form>
