--- a/Views/Book/Category.cshtml
+++ b/Views/Book/Category.cshtml
@@ -1,4 +1,5 @@
 @model List<BookCave.Models.ViewModels.BookListViewModel>
+
 <div class="row">
     <div class="col-sm-3">
         <form asp-controller="Book" asp-action="Filter">
@@ -8,50 +9,38 @@
                     <input class="form-check-input" type="checkbox" id="spenna" value="Spenna"/> Spenna
                 </label>
             </div>
-
             <div class="form-check form-check">
                 <label class="form-check-label">
                     <input class="form-check-input" type="checkbox" id="gaman" value="Gaman"/> Gaman
                 </label>
             </div>
-
             <div class="form-check form-check">
                 <label class="form-check-label">
                     <input class="form-check-input" type="checkbox" id="aevintyri" value="Aevintyri"/> Ævintýri
                 </label>
             </div>
-
             <div class="form-check form-check">
                 <label class="form-check-label">
                     <input class="form-check-input" type="checkbox" id="barna" value="Barna"/> Barna
                 </label>
             </div>
-            
-            
-
             <p>Verð: </p>
-
-
-          
             <p>Tungumál: </p>
             <div class="form-check form-check">
                 <label class="form-check-label">
                     <input class="form-check-input" type="checkbox" id="islenska" value="Islenska"/> Íslenska
                 </label>
             </div>
-
             <div class="form-check form-check">
                 <label class="form-check-label">
                     <input class="form-check-input" type="checkbox" id="enska" value="Enska"/> Enska
                 </label>
             </div>
-
             <div class="form-check form-check">
                 <label class="form-check-label">
                     <input class="form-check-input" type="checkbox" id="danska" value="Danska"/> Danska
                 </label>
             </div>
-
             <div class="form-check form-check">
                 <label class="form-check-label">
                     <input class="form-check-input" type="checkbox" id="franska" value="Franska"/> Franska
@@ -60,56 +49,55 @@
             <button asp-controller="Home" asp-action="Index" class="btn btn-success active">Sía</button>
         </form>
     </div>
-
     <div class="container">
-            <h1>@ViewBag.Genre</h1>
-            <div>
-                <form  asp-controller="Book" asp-action="Category">
-                    <div>
-                        <label>Raða eftir: 
-                            <select class="custom-select" name="orderby">
-                                <option hidden>Veldu hér</option>
-                                <option value="lowest">Ódýrasta verði</option>
-                                <option value="highest">Dýrasta verði</option>
-                                <option value="name">Nafni bókar</option>
-                            </select>
-                        </label>
-                        <input type="submit" value="Raða" class="btn btn-info"/>
-                    </div>                    
-                </form>
-            </div>
-            <br/>
-            <br/>
-            <div class="col-md-9 col-sm-9">
-                    @foreach(var book in @Model)
-                    {
-                        <div class="col-xs-4 books">
-                        <span class="thumbnail">
-                            <a asp-controller="Book" asp-action="Details" asp-route-id="@book.Id"><img src="@book.Image" alt="cover"></a>
-                            <h4><a asp-controller="Book" asp-action="Details" asp-route-id="@book.Id">@book.Name</a></h4>
-                            <div class="ratings">
-                                <span class="glyphicon glyphicon-star"></span>
-                                <span class="glyphicon glyphicon-star"></span>
-                                <span class="glyphicon glyphicon-star"></span>
-                                <span class="glyphicon glyphicon-star"></span>
-                                <span class="glyphicon glyphicon-star-empty"></span>
-                            </div>
-                            <hr class="line">
-                            <div class="row">
-                                <div class="col-md-6 col-sm-6">
-                                    <p class="price">@book.Price kr.</p>
-                                </div>
-                                <div class="col-md-6 col-sm-6">
-                                    <a asp-controller="Book" asp-action="Details" asp-route-id="@book.Id" class="btn btn-success right">Skoða bók</a>
-                                </div>
-                            </div>
-                        </span>
+        <h1>@ViewBag.Genre</h1>
+        <div>
+            <form asp-controller="Book" asp-action="Category">
+                <div>
+                    <label>Raða eftir: 
+                        <select class="custom-select" name="orderby">
+                            <option hidden>Veldu hér</option>
+                            <option value="lowest">Ódýrasta verði</option>
+                            <option value="highest">Dýrasta verði</option>
+                            <option value="name">Nafni bókar</option>
+                        </select>
+                    </label>
+                    <input type="submit" value="Raða" class="btn btn-info"/>
+                </div>                    
+            </form>
+        </div>
+        <br/>
+        <br/>
+        <div class="col-md-9 col-sm-9">
+            @foreach (var book in @Model)
+            {
+                <div class="col-xs-4 books">
+                    <span class="thumbnail">
+                        <a asp-controller="Book" asp-action="Details" asp-route-id="@book.Id"><img src="@book.Image" alt="cover"></a>
+                        <h4><a asp-controller="Book" asp-action="Details" asp-route-id="@book.Id">@book.Name</a></h4>
+                        <div class="ratings">
+                            <span class="glyphicon glyphicon-star"></span>
+                            <span class="glyphicon glyphicon-star"></span>
+                            <span class="glyphicon glyphicon-star"></span>
+                            <span class="glyphicon glyphicon-star"></span>
+                            <span class="glyphicon glyphicon-star-empty"></span>
                         </div>
-                    }
-                </div>  
-            </div>
+                        <hr class="line"/>
+                        <div class="row">
+                            <div class="col-md-6 col-sm-6">
+                                <p class="price">@book.Price kr.</p>
+                            </div>
+                            <div class="col-md-6 col-sm-6">
+                                <a asp-controller="Book" asp-action="Details" asp-route-id="@book.Id" class="btn btn-success right">Skoða bók</a>
+                            </div>
+                        </div>
+                    </span>
+                </div>
+            }
+        </div>  
     </div>
 </div>
+
     
     
     
