--- a/Views/Book/Details.cshtml
+++ b/Views/Book/Details.cshtml
@@ -6,58 +6,44 @@
             <img style="max-width:100%;" src="@Model.Image"/>
         </div>
         <div class="col-xs-5" style="border:0px solid gray">
-            
             <h3>@Model.Name</h3>  
             <h4>Eftir @Model.Author</h4> 
             <h5>@Model.Genre</h5> 
             <h5 style="color:#337ab7"> Einkunn fyrir @Model.Name: · <small style="color:#337ab7">@Model.Rating / 5</small></h5>
-        
             <div class="section">
                 <h6 class="title-price"><small>Verð</small></h6>
                 <h3 style="margin-top:0px;">@Model.Price kr</h3>
             </div>
-                
             <div class="section" style="padding-bottom:20px;">
-            
-                    <h6 class="title-attr"><small>Fjöldi</small></h6>                    
-                    <div>
-                        <form method = "POST">
-                            <input id="copies" type="number" asp-for="Copies" min="1" value="1">
-                            <br/>
-                            <br/>
-                            <input class="btn btn-success" type="submit" value="Setja í körfu">
-                        </form>
-                        <!--<div class="btn-minus" onclick="increment()"><span class="glyphicon glyphicon-minus"></span></div>
-                            <input type="number" value="1" />
-                        <div class="btn-plus"><span class="glyphicon glyphicon-plus"></span></div>-->
-                    </div>
-            </div>                
-                    
+                <h6 class="title-attr"><small>Fjöldi</small></h6>                    
+                <div>
+                    <form method="POST">
+                        <input id="copies" type="number" asp-for="Copies" min="1" value="1"/>
+                        <br/>
+                        <br/>
+                        <input class="btn btn-success" type="submit" value="Setja í körfu"/>
+                    </form>
+                </div>
+            </div>                 
             <div class="section" style="padding-bottom:20px;">
                 <h6><a asp-controller="Book" asp-action="AddRating" asp-route-id="@Model.Id">Bæta við athugasemd og/eða einkunn</a></h6>
             </div>                                        
         </div>                              
-
         <div class="col-xs-9">
             <ul class="menu-items">
                 <li class="active">Lýsing</li>
             </ul>
             <div style="width:100%;border-top:1px solid silver">
-                <p style="padding:15px;">
-                    <small>
-                        @Model.Description
-                    </small>
-                </p>
+                <p style="padding:15px;"><small>@Model.Description</small></p>
             </div>
         </div>
-
-            <div class="container">
+        <div class="container">
             <div class="row">
                 <div class="col-md-8">
-                  <div class="page-header">
-                    <h1><small class="pull-right">@Model.Comments.Count athugasemd/ir</small> Athugasemdir </h1>
-                  </div> 
-                   <div class="comments-list">
+                    <div class="page-header">
+                        <h1><small class="pull-right">@Model.Comments.Count athugasemd/ir</small> Athugasemdir </h1>
+                    </div> 
+                    <div class="comments-list">
                         @foreach(var comment in @Model.Comments)
                         {
                             <div class="media">
@@ -73,5 +59,5 @@
         </div>
     </div>
 </div>
-<div>
+
 
