--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -24,6 +24,7 @@
                         <input type="submit" class="btn btn-default" value="Skrá inn"/>
                         <a asp-controller="Account" asp-action="Register">Nýr notandi?</a>
                     </div>
+                    <span class="text-danger">@ViewData["ErrorMessage"]</span>
                 </form>
             </section>
         </div>
