--- a/Views/Book/Category.cshtml
+++ b/Views/Book/Category.cshtml
@@ -67,7 +67,7 @@
                 <form  asp-controller="Book" asp-action="Category">
                     <div>
                         <label>Raða eftir: 
-                            <select class="custom-select" name="orderby">
+                            <select class="custom-select" name="orderBy">
                                 <option hidden>Veldu hér</option>
                                 <option value="lowest">Ódýrasta verði</option>
                                 <option value="highest">Dýrasta verði</option>
