cart and reviewOrder styling

--- a/Views/Cart/Index.cshtml
+++ b/Views/Cart/Index.cshtml
@@ -25,8 +25,8 @@
                     {
                         <tr>
                         <td class="col-sm-8 col-md-6">
-                        <div >
-                            <a class="thumbnail pull-left"> <img class="media-object" src="@book.Image" style="width: 72px; height: 72px;"> </a>
+                        <div>
+                            <img class="thumbnail pull-left" src="@book.Image" style="width: 100px; height: 100px;">
                             <div class="media-body">
                                 <h4 class="media-heading">@book.Name</h4>
                                 <h5 class="media-heading">@book.Author</h5>
