fixing code indent and removing files

--- a/Views/Order/ReviewOrder.cshtml
+++ b/Views/Order/ReviewOrder.cshtml
@@ -6,30 +6,30 @@
             <div class="grid invoice">
                 <div class="grid-body">
                     <div class="invoice-title">
-                        <br>
+                        <br/>
                         <div class="row">
                             <div class="col-xs-12">
-                                <h2>Yfirlit<br>
+                                <h2>Yfirlit<br/>
                             </div>
                         </div>
                     </div>
-                    <hr>
+                    <hr/>
                     <div class="row">
                         <div class="col-xs-6">
                             <address>
-                                <strong>Greiðandi:</strong><br>
-                                @Model.Checkout.PayerName<br>
-                                @Model.Checkout.PayerCountry @Model.Checkout.PayerZIP @Model.Checkout.PayerCity<br>
-                                @Model.Checkout.PayerAddress<br>
+                                <strong>Greiðandi:</strong><br/>
+                                @Model.Checkout.PayerName<br/>
+                                @Model.Checkout.PayerCountry @Model.Checkout.PayerZIP @Model.Checkout.PayerCity<br/>
+                                @Model.Checkout.PayerAddress<br/>
                                 <abbr title="Phone">S:</abbr> @Model.Checkout.PayerPhoneNumber
                             </address>
                         </div>
                         <div class="col-xs-6 text-right">
                             <address>
-                                <strong>Viðtakandi:</strong><br>
-                                @Model.Checkout.ReceiverName<br>
-                                @Model.Checkout.ReceiverCountry @Model.Checkout.ReceiverZIP @Model.Checkout.ReceiverCity<br>
-                                @Model.Checkout.ReceiverAddress<br>
+                                <strong>Viðtakandi:</strong><br/>
+                                @Model.Checkout.ReceiverName<br/>
+                                @Model.Checkout.ReceiverCountry @Model.Checkout.ReceiverZIP @Model.Checkout.ReceiverCity<br/>
+                                @Model.Checkout.ReceiverAddress<br/>
                                 <abbr title="Phone">S:</abbr> @Model.Checkout.ReceiverPhoneNumber
                             </address>
                         </div>
