--- a/Views/Home/SpecialOrd.cshtml
+++ b/Views/Home/SpecialOrd.cshtml
@@ -1,152 +1,91 @@
 @model BookCave.Models.InputModels.SpecialOrderInputModel
 
 <div class="container-fluid text-center">    
-  <div class="row content">
-    <div class="col-sm-2 sidenav">
+    <div class="row content">
+        <div class="col-sm-2 sidenav"></div>
+        <div class="col-sm-8 text-left specialOrd-div"> 
+            @{
+                ViewData["Title"] = "Sérpantanir";
+            }
+            <h1>@ViewData["Title"]</h1>
+            <p>Við rekum umfangsmikla pöntunarþjónustu. Við bjóðum upp á mikið og breitt úrval af bókum en finnir þú ekki bókina sem þú leitar að, þá gerum við okkar 
+                besta til að hjálpa þér.<br/>
+                Við viljum einnig þjóna þeim sem kaupa bækur í miklu magni hverju sinni. 
+                Hér getur þú pantað eins margar bækur og þér sýnist.</p>
+            <p> Fylltu inn upplýsingar hér að neðan um þá bók sem þú óskar eftir og legðu inn pöntun.</p>
+            <p>Sérpantaðar vörur greiðast við afhendingu. Þú færð tilkynningu í tölvupósti þegar varan hefur 
+                borist okkur og þá er gengið frá greiðslu- og afhendingarmáta. Erlendar vörur taka um 2-4 vikur 
+                í pöntun en íslenskar vörur taka innan við viku.</p>
+            <h2>Upplýsingar um kaupanda</h2>
+            <form asp-action="SpecialOrd">
+                <div class="form-group col-md-8">
+                    <label for="inputName">Nafn<span class="text-danger">*</span></label>
+                    <input asp-for="Name" type="text" class="form-control" id="inputName"/>
+                    <span asp-validation-for="Name" class="text-danger"></span>
+                </div>
+                <div class="form-group col-md-4">
+                    <label for="inputPhone">Símanúmer<span class="text-danger">*</span></label>
+                    <input asp-for="Phone" type="text" class="form-control" id="inputPhone"/>
+                    <span asp-validation-for="Phone" class="text-danger"></span>
+                </div>
+                <div class="form-row">
+                    <div class="form-group col-md-5">
+                        <label for="inputAddress">Heimilisfang<span class="text-danger">*</span></label>
+                        <input asp-for="Address"type="text" class="form-control" id="Address"/>
+                        <span asp-validation-for="Address" class="text-danger"></span>
+                    </div>
+                    <div class="form-group col-md-2">
+                        <label for="inputZip">Póstnúmer<span class="text-danger">*</span></label>
+                        <input asp-for="Zip" type="text" class="form-control" id="inputZip"/>
+                        <span asp-validation-for="Zip" class="text-danger"></span>
+                    </div>
+                    <div class="form-group col-md-5">
+                        <label for="inputCity">Borg<span class="text-danger">*</span></label>
+                        <input asp-for="City"type="text" class="form-control" id="inputCity"/>
+                        <span asp-validation-for="City" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="inputEmail">Netfang<span class="text-danger">*</span></label>
+                    <input asp-for="Email" type="email" class="form-control" id="inputEmail"/>
+                    <span asp-validation-for="Email" class="text-danger"></span>
+                </div>
+                <h3>Upplýsingar um bók</h3> 
+                <div id="orderInput">
+                    <div class="form-group col-md-6">
+                        <label for="title"><b>Titill<span class="text-danger">*</span></b></label>
+                        <input asp-for="Title" type="text" class="form-control" id="inputTitle"/>
+                        <span asp-validation-for="Title" class="text-danger"></span>
+                    </div>
+                    <div class="form-group col-md-6"> 
+                        <label for="author"><b>Höfundur<span class="text-danger">*</span></b></label>
+                        <input asp-for="Author" type="text" class="form-control" id="inputAuthors"/>
+                        <span asp-validation-for="Author" class="text-danger"></span>
+                    </div>
+                    <div class="form-group col-md-6">  
+                        <label for="publishDate"><b>Útgáfuár<span class="text-danger">*</span></b></label>
+                        <input asp-for="PublishDate" type="text" class="form-control" id="inputPublishDate"/>
+                        <span asp-validation-for="PublishDate" class="text-danger"></span>
+                    </div>
+                    <div class="form-group col-md-6">
+                        <label for="amount"><b>Magn (ath. minnst 20 bækur til að geta gert sérpöntun)<span class="text-danger">*</span></b></label>
+                        <input asp-for="Amount" type="number" class="form-control" id="inputAmount" min="20"/>
+                        <span asp-validation-for="Amount" class="text-danger"></span>
+                    </div>
+                </div>  
+                <div class="form-group">
+                    <label for="exampleFormControlTextarea1">Athugasemdir</label>
+                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="4"></textarea>
+                </div>
+                <div class="form-group">
+                    <div class="col-xs-offset-3 col-md-8 col-sm-9"><span class="text-muted"><span class="label label-danger">Athugasemd:-</span> Með því að smella á "Senda sérpöntun", ert þú að samþykkja <a asp-area="" asp-controller="Home" asp-action="Terms">skilmála og skilyrði</a> Book Cave.</span> </div>
+                </div>
+                <div class="form-group">
+                    <button class="btn btn-default" type="submit">Senda sérpöntun</button>
+                </div>
+            </form>
+        </div>
     </div>
-    <div class="col-sm-8 text-left specialOrd-div"> 
-        @{
-            ViewData["Title"] = "Sérpantanir";
-        }
-        <h1>@ViewData["Title"]</h1>
-        <p>Við rekum umfangsmikla pöntunarþjónustu. Við bjóðum upp á mikið og breitt úrval af bókum en finnir þú ekki bókina sem þú leitar að, þá gerum við okkar 
-            besta til að hjálpa þér.</br>
-            Við viljum einnig þjóna þeim sem kaupa bækur í miklu magni hverju sinni. 
-            Hér getur þú pantað eins margar bækur og þér sýnist.</p>
-        <p> Fylltu inn upplýsingar hér að neðan um þá bók sem þú óskar eftir og legðu inn pöntun.</p>
-
-        <p>Sérpantaðar vörur greiðast við afhendingu. Þú færð tilkynningu í tölvupósti þegar varan hefur 
-            borist okkur og þá er gengið frá greiðslu- og afhendingarmáta. Erlendar vörur taka um 2-4 vikur 
-            í pöntun en íslenskar vörur taka innan við viku.</p>
-        <!--
-        <h2>Upplýsingar fyrir sérpöntun</h2>
-                <form action="contact-us-send.php" method="post">
-        <ul>
-            <li><label for="name">Your Name</label> 
-                <input id="name" name="name" type="text" /></li>
-            <li><label for="email">Your Email</label>
-                <input id="email" name="email" type="text" /></li>
-            <li><label for="comment">Your Name</label>
-                <textarea id="comment" name="comment"></textarea></li>
-            <li><input id="submit" name="submit" type="submit" 
-                value="Click to Send Comments" /></li>
-        </ul>
-        </form>-->
-<!--
-        <form action="mailto:someone@example.com" method="post" enctype="text/plain">
-        Nafn:<br>
-        <input type="text" name="name"><br>
-        Netfang:<br>
-        <input type="text" name="mail"><br>
-        Símanúmer:<br>
-        <input type="text" name="phone"><br>
-        <h2>Upplýsingar um sérpantaðar bækur:</h2>
-        Vinsamlegast setjið nafn bókar, höfundd, fjölda og ISPN(13 stafa) númer fyrir hverja sérpantaða bók
-        <br>
-        <input type="text" name="comment" size="50"><br><br>
-        <input type="submit" value="Senda fyrirspurn">
-        <input type="reset" value="Hreinsa">
-        </form>-->
-
-        <h2>Upplýsingar um kaupanda</h2>
-
-        <form asp-action="SpecialOrd">
-        <div class="form-group col-md-8">
-            <label for="inputName">Nafn<span class="text-danger">*</span></label>
-            <input asp-for="Name" type="text" class="form-control" id="inputName"/>
-            <span asp-validation-for="Name" class="text-danger"></span>
-        </div>
-
-        <div class="form-group col-md-4">
-            <label for="inputPhone">Símanúmer<span class="text-danger">*</span></label>
-            <input asp-for="Phone" type="text" class="form-control" id="inputPhone"/>
-            <span asp-validation-for="Phone" class="text-danger"></span>
-        </div>
-        <div class="form-row">
-            <div class="form-group col-md-5">
-            <label for="inputAddress">Heimilisfang<span class="text-danger">*</span></label>
-            <input asp-for="Address"type="text" class="form-control" id="Address"/>
-            <span asp-validation-for="Address" class="text-danger"></span>
-            </div>
-            <div class="form-group col-md-2">
-            <label for="inputZip">Póstnúmer<span class="text-danger">*</span></label>
-            <input asp-for="Zip" type="text" class="form-control" id="inputZip"/>
-            <span asp-validation-for="Zip" class="text-danger"></span>
-            </div>
-            <div class="form-group col-md-5">
-            <label for="inputCity">Borg<span class="text-danger">*</span></label>
-            <input asp-for="City"type="text" class="form-control" id="inputCity"/>
-            <span asp-validation-for="City" class="text-danger"></span>
-            </div>
-        </div>
-
-        <div class="form-group">
-            <label for="inputEmail">Netfang<span class="text-danger">*</span></label>
-            <input asp-for="Email" type="email" class="form-control" id="inputEmail"/>
-            <span asp-validation-for="Email" class="text-danger"></span>
-        </div>
-
-        <h3>Upplýsingar um bók</h3> 
-        <div id="orderInput">
-            <div class="form-group col-md-6">
-            <label for="title"><b>Titill<span class="text-danger">*</span></b></label>
-            <input asp-for="Title" type="text" class="form-control" id="inputTitle"/>
-            <span asp-validation-for="Title" class="text-danger"></span>
-            </div>
-
-            <div class="form-group col-md-6"> 
-            <label for="author"><b>Höfundur<span class="text-danger">*</span></b></label>
-            <input asp-for="Author" type="text" class="form-control" id="inputAuthors"/>
-            <span asp-validation-for="Author" class="text-danger"></span>
-            </div>
-                
-            <div class="form-group col-md-6">  
-            <label for="publishDate"><b>Útgáfuár<span class="text-danger">*</span></b></label>
-            <input asp-for="PublishDate" type="text" class="form-control" id="inputPublishDate"/>
-            <span asp-validation-for="PublishDate" class="text-danger"></span>
-            </div>
-
-            <div class="form-group col-md-6">
-            <label for="amount"><b>Magn (ath. minnst 20 bækur til að geta gert sérpöntun)<span class="text-danger">*</span></b></label>
-            <input asp-for="Amount" type="number" class="form-control" id="inputAmount" min="20">
-            <span asp-validation-for="Amount" class="text-danger"></span>
-            </div>
-        </div>  
-
-        <!--button type="button" class="btn btn-primary" id="addBook-btn">Bæta við bók</button>
-
-        <table class="table table-striped">
-            <thead>
-            <tr>
-                <th>Titill</th>
-                <th>Höfundur</th>
-                <th>Útgáfuár</th>
-                <th>Magn</th>
-            </tr>
-            </thead>
-            <tbody>
-
-            </tbody>
-        </table>
-        <br>
-        <br-->
-
-        <div class="form-group">
-        <label for="exampleFormControlTextarea1">Athugasemdir</label>
-        <textarea class="form-control" id="exampleFormControlTextarea1" rows="4"></textarea>
-        </div>
-
-        <div class="form-group">
-            <div class="col-xs-offset-3 col-md-8 col-sm-9"><span class="text-muted"><span class="label label-danger">Athugasemd:-</span> Með því að smella á "Senda sérpöntun", ert þú að samþykkja <a asp-area="" asp-controller="Home" asp-action="Terms">skilmála og skilyrði</a> Book Cave.</span> </div>
-        </div>
-        <div class="form-group">
-            <button class="btn btn-default" type="submit">Senda sérpöntun</button>
-        </div>
-        <!--button asp-controller="Home" asp-action="ConfirmationSpecialOrder" type="submit" class="btn btn-success">Senda pöntun</button-->
-
-        </form>
-    </div>
-  </div>
 </div>
 
 
