--- a/Views/Home/SearchBar.cshtml
+++ b/Views/Home/SearchBar.cshtml
@@ -1,5 +1,9 @@
 @model List<BookCave.Models.ViewModels.BookListViewModel>
 
+<div>
+    <h2>Leitarniðurstöður fyrir "@ViewBag.SearchInput "</h2>
+</div>
+
 <div class="container" style="text-align: center;">
     <div class="col-md-9 col-sm-12">
         @foreach (var book in @Model)
