--- a/Views/Book/Category.cshtml
+++ b/Views/Book/Category.cshtml
@@ -4,10 +4,10 @@
     <div class="container">
         <h1>@ViewBag.Genre</h1>
         <div>
-            <form asp-controller="Book" asp-action="Category">
+            <form asp-controller="Book" asp-action="Category" >
                 <div>
                     <label>Raða eftir: 
-                        <select class="custom-select" name="orderby">
+                        <select class="custom-select" name="orderBy">
                             <option hidden>Veldu hér</option>
                             <option value="lowest">Ódýrasta verði</option>
                             <option value="highest">Dýrasta verði</option>
